Updated header and link

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: hello@akasha.world
 logo: logo.png # image from https://www.flickr.com/photos/lwr/5496279831/in/set-72157594159055823
 description: > # this means to ignore newlines until "url:"
   AKASHA | The language of freedom
-url: "https://akashaproject.github.io"
+url: "http://blog.akasha.world"
 
 baseurl: ""
 twitter_username: AkashaProject
