--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: AKASHA blog
+title: AKASHA Blog
 email: hello@akasha.world
 logo: logo.png # image from https://www.flickr.com/photos/lwr/5496279831/in/set-72157594159055823
 description: > # this means to ignore newlines until "url:"
